cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_10203_514761357.yaml
Parameters:
  ClusterType:
    Type: String
    Default: single-node
    AllowedValues:
      - single-node
      - multi-node
    Description: The type of cluster (single-node or multi-node).
  DatabaseName:
    Type: String
    Default: dwh
    AllowedPattern: ([a-z]|[0-9])+
    Description: The name of the first database to be created when the cluster is created.
  InboundTraffic:
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: Must be a valid CIDR range of the form x.x.x.x/x.
    Description: Allow inbound traffic to the cluster from this CIDR range.
    MaxLength: 18
    MinLength: 9
  MasterUserName:
    Type: String
    Default: rsadmin
    AllowedPattern: ([a-z])([a-z]|[0-9])*
    Description: The user name that is associated with the master user account         for the cluster that is being created.
  MasterUserPassword:
    Type: String
    Default: iamRsadmin1!
    Description: The password that is associated with the master user account         for the cluster that is being created.
    NoEcho: true
  NodeType:
    Type: String
    Default: ra3.xlplus
    AllowedValues:
      - ds2.xlarge
      - ra3.xlplus
      - ra3.4xlarge
      - ra3.16xlarge
    Description: The type of node to be provisioned, e.g., ra3.xlplus or ds2.xlarge.
  NumberOfNodes:
    Type: Number
    Default: "1"
    Description: The number of compute nodes in the cluster.         For multi-node clusters, the NumberOfNodes parameter must be greater than 1.
  PortNumber:
    Type: Number
    Default: "5439"
    Description: The port number on which the cluster accepts incoming connections.
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Conditions:
  IsSingleNodeClusterCondition:
    Fn::Equals:
      - Ref: ClusterType
      - single-node
  IsMultiNodeClusterCondition:
    Fn::Equals:
      - Ref: ClusterType
      - multi-node
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
Resources:
  dataeduRsSpectrumRole05E2033A:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: redshift.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AWSGlueConsoleFullAccess
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AmazonS3ReadOnlyAccess
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsSpectrumRole/Resource
  dataeduRsSpectrumRoleDefaultPolicyA0FFD389:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - glue:*
              - lakeformation:GetDataAccess
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: dataeduRsSpectrumRoleDefaultPolicyA0FFD389
      Roles:
        - Ref: dataeduRsSpectrumRole05E2033A
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsSpectrumRole/DefaultPolicy/Resource
  dataeduRsVPCB9E10F0D:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: DataEduRedshiftEeStack/dataeduRsVPC
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsVPC/Resource
  dataeduRsVPCdataedurspublicSubnet1SubnetB6AEEE94:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: dataeduRsVPCB9E10F0D
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.1.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: dataedu-rs-public-
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: DataEduRedshiftEeStack/dataeduRsVPC/dataedu-rs-public-Subnet1
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsVPC/dataedu-rs-public-Subnet1/Subnet
  dataeduRsVPCdataedurspublicSubnet1RouteTableA5232156:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: dataeduRsVPCB9E10F0D
      Tags:
        - Key: Name
          Value: DataEduRedshiftEeStack/dataeduRsVPC/dataedu-rs-public-Subnet1
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsVPC/dataedu-rs-public-Subnet1/RouteTable
  dataeduRsVPCdataedurspublicSubnet1RouteTableAssociation4F6F060C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: dataeduRsVPCdataedurspublicSubnet1RouteTableA5232156
      SubnetId:
        Ref: dataeduRsVPCdataedurspublicSubnet1SubnetB6AEEE94
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsVPC/dataedu-rs-public-Subnet1/RouteTableAssociation
  dataeduRsVPCdataedurspublicSubnet1DefaultRouteE44ED23C:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: dataeduRsVPCdataedurspublicSubnet1RouteTableA5232156
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: dataeduRsVPCIGW02B5ACA9
    DependsOn:
      - dataeduRsVPCVPCGW6EAEBDAB
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsVPC/dataedu-rs-public-Subnet1/DefaultRoute
  dataeduRsVPCdataedurspublicSubnet2Subnet6C908321:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: dataeduRsVPCB9E10F0D
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.1.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: dataedu-rs-public-
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: DataEduRedshiftEeStack/dataeduRsVPC/dataedu-rs-public-Subnet2
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsVPC/dataedu-rs-public-Subnet2/Subnet
  dataeduRsVPCdataedurspublicSubnet2RouteTable3B7BCE2A:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: dataeduRsVPCB9E10F0D
      Tags:
        - Key: Name
          Value: DataEduRedshiftEeStack/dataeduRsVPC/dataedu-rs-public-Subnet2
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsVPC/dataedu-rs-public-Subnet2/RouteTable
  dataeduRsVPCdataedurspublicSubnet2RouteTableAssociationEC286C1C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: dataeduRsVPCdataedurspublicSubnet2RouteTable3B7BCE2A
      SubnetId:
        Ref: dataeduRsVPCdataedurspublicSubnet2Subnet6C908321
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsVPC/dataedu-rs-public-Subnet2/RouteTableAssociation
  dataeduRsVPCdataedurspublicSubnet2DefaultRouteBE93ADD4:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: dataeduRsVPCdataedurspublicSubnet2RouteTable3B7BCE2A
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: dataeduRsVPCIGW02B5ACA9
    DependsOn:
      - dataeduRsVPCVPCGW6EAEBDAB
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsVPC/dataedu-rs-public-Subnet2/DefaultRoute
  dataeduRsVPCIGW02B5ACA9:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: DataEduRedshiftEeStack/dataeduRsVPC
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsVPC/IGW
  dataeduRsVPCVPCGW6EAEBDAB:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: dataeduRsVPCB9E10F0D
      InternetGatewayId:
        Ref: dataeduRsVPCIGW02B5ACA9
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsVPC/VPCGW
  dataeduRsSG189AC86A:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: DataEDU Redshift cluster security group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: dataeduRsVPCB9E10F0D
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsSG/Resource
  dataeduRsSGfromIndirectPeerIndirectPort38A45E35:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      CidrIp:
        Ref: InboundTraffic
      Description: Redshift Ingress
      FromPort:
        Ref: PortNumber
      GroupId:
        Fn::GetAtt:
          - dataeduRsSG189AC86A
          - GroupId
      ToPort:
        Ref: PortNumber
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsSG/from {IndirectPeer}:{IndirectPort}
  dataeduRsClusterParameterGroup:
    Type: AWS::Redshift::ClusterParameterGroup
    Properties:
      Description: Redshift cluster parameter group
      ParameterGroupFamily: redshift-1.0
      Parameters:
        - ParameterName: enable_user_activity_logging
          ParameterValue: "true"
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsClusterParameterGroup
  dataeduRsClusterSubnetGroup:
    Type: AWS::Redshift::ClusterSubnetGroup
    Properties:
      Description: Redshift cluster parameter group
      SubnetIds:
        - Ref: dataeduRsVPCdataedurspublicSubnet1SubnetB6AEEE94
        - Ref: dataeduRsVPCdataedurspublicSubnet2Subnet6C908321
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduRsClusterSubnetGroup
  dataeduSingleNodeRsCluster:
    Type: AWS::Redshift::Cluster
    Properties:
      ClusterType:
        Ref: ClusterType
      DBName:
        Ref: DatabaseName
      MasterUsername:
        Ref: MasterUserName
      MasterUserPassword:
        Ref: MasterUserPassword
      NodeType:
        Ref: NodeType
      ClusterParameterGroupName:
        Ref: dataeduRsClusterParameterGroup
      ClusterSubnetGroupName:
        Ref: dataeduRsClusterSubnetGroup
      IamRoles:
        - Fn::GetAtt:
            - dataeduRsSpectrumRole05E2033A
            - Arn
      Port:
        Ref: PortNumber
      PubliclyAccessible: true
      VpcSecurityGroupIds:
        - Fn::GetAtt:
            - dataeduRsSG189AC86A
            - GroupId
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduSingleNodeRsCluster
    Condition: IsSingleNodeClusterCondition
  dataeduMultiNodeRsCluster:
    Type: AWS::Redshift::Cluster
    Properties:
      ClusterType:
        Ref: ClusterType
      DBName:
        Ref: DatabaseName
      MasterUsername:
        Ref: MasterUserName
      MasterUserPassword:
        Ref: MasterUserPassword
      NodeType:
        Ref: NodeType
      ClusterParameterGroupName:
        Ref: dataeduRsClusterParameterGroup
      ClusterSubnetGroupName:
        Ref: dataeduRsClusterSubnetGroup
      IamRoles:
        - Fn::GetAtt:
            - dataeduRsSpectrumRole05E2033A
            - Arn
      NumberOfNodes:
        Ref: NumberOfNodes
      Port:
        Ref: PortNumber
      PubliclyAccessible: true
      VpcSecurityGroupIds:
        - Fn::GetAtt:
            - dataeduRsSG189AC86A
            - GroupId
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/dataeduMultiNodeRsCluster
    Condition: IsMultiNodeClusterCondition
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/31Ru27DMAz8lu6yCrtL18BDkM2wi6yFLDMNE1sKJKqBIejfq4ebAB068Xg86kiq4W8Nr1/E3VZyulYzjtwPJOSVtSfVCSMWIDApabWakFArFsWfHsXCfa9nSLUcOz2jXHNfRoGBbLg/3mTijl3LOjfGwuBGBZS4J+q1I/gQY3mu8E9uZ62WKLL5rziBg4qzReVeENzFutls2Y7iGucFFLEBpDNI695od8sG/xIH9WXA2sAMTPaMJ+I+7T87G+0eN3n0boUy9F82BNaD1c7IcqgNB6b0BPxiX7/rd16nL7hYxMo4RbgA70v8AZAYSzOeAQAA
    Metadata:
      aws:cdk:path: DataEduRedshiftEeStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
